--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,12 +1,12 @@
 .footer {
 	position: absolute;
-	bottom: 1%;
-	width: 7%;
-	right: 17px;
-}
+	bottom: 0;
+	width: 100%;
+	height: 60px; /* Height of the footer */
+}	
 
 span.text-muted {
-	font-size: 0.7em;
+	font-size: 1em;
 }
 
 .fa-search {
@@ -74,8 +74,8 @@ button.btn.btn-primary.float-right {
 }
 
 ul#analysisConfigDropdown {
-	width: 100%;
-	padding-left: 3%;
+    padding-left: 3%;
+    min-width: 215px;
 }
 
 .fa-save {
