--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -485,15 +485,7 @@
 			</div>
 		</div>
 	</div>
-	<footer class="footer">
-		<div class="container">
-			<span class="text-muted"> <img src="images/onekinLogo.png"
-				alt="Logo" style="width: 110px; height: 60px;"> Contact:
-				oscar.diaz@ehu.eus, raul.medeiros@ehu.eus </img>
-			</span>
 
-		</div>
-	</footer>
 
 
 
@@ -519,7 +511,7 @@
 					 events: {
 			                click: function (event) {
 								   		if (event.point.isNode){
-								   			window.open(window.location.origin+"localhost:9090/node-customizations/"+event.point.sankeyNodeType.toLowerCase()+"/"+event.point.id);
+								   			window.open(window.location.origin+"/node-customizations/"+event.point.sankeyNodeType.toLowerCase()+"/"+event.point.id);
 								   		}else{
 								   			window.open(window.location.origin+"/link-customizations/"+event.point.sankeyLinkType.toLowerCase()+"?from="+event.point.from+"&to="+event.point.to);
 								   		}
