--- a/src/main/resources/templates/links-diffs.html
+++ b/src/main/resources/templates/links-diffs.html
@@ -43,27 +43,37 @@
 		</ol>
 	</div>
 	<div class="container">
+	<div class="row">
+		<div class="col-lg-3">
+			<h4>Tangled features: </h4>
+			<ul  style="list-style-type:none;" >
+				<li th:each="feature : ${tangledFeatures}" ><a th:text="${feature}" th:href="'/?featureName='+${feature}"></a></li>
+			</ul>
+		</div>
+		<div class="col-lg-8">
+			<div id="accordion">
+				<div class="card" th:each="customization,iter : ${customizations}">
+					<div class="card-header" th:id="'heading'+${iter.index}">
+						<h5 class="mb-0">
+							<button class="btn btn-link" data-toggle="collapse"
+									th:data-target="'#collapse'+${iter.index}" aria-expanded="true"
+									th:aria-controls="'collapse'+${iter.index}" th:inline="text">
+								FILE: [[${#strings.capitalize(customization.capath)}]] - VP Expr:
+								[[${customization.expression}]]<i class="fas fa-caret-down"></i>
+							</button>
+						</h5>
+					</div>
 
-		<div id="accordion">
-			<div class="card" th:each="customization,iter : ${customizations}">
-				<div class="card-header" th:id="'heading'+${iter.index}">
-					<h5 class="mb-0">
-						<button class="btn btn-link" data-toggle="collapse"
-							th:data-target="'#collapse'+${iter.index}" aria-expanded="true"
-							th:aria-controls="'collapse'+${iter.index}" th:inline="text">
-							FILE: [[${#strings.capitalize(customization.capath)}]] - VP Expr:
-							[[${customization.expression}]]<i class="fas fa-caret-down"></i>
-						</button>
-					</h5>
-				</div>
-
-				<div th:id="'collapse'+${iter.index}" class="collapse"
-					th:aria-labelledby="'heading'+${iter.index}"
-					data-parent="#accordion">
-					<div class="card-body diffview" th:id="'diffview'+${iter.index}"></div>
+					<div th:id="'collapse'+${iter.index}" class="collapse"
+						 th:aria-labelledby="'heading'+${iter.index}"
+						 data-parent="#accordion">
+						<div class="card-body diffview" th:id="'diffview'+${iter.index}"></div>
+					</div>
 				</div>
 			</div>
 		</div>
+
+	</div>
 	</div>
 	<footer class="footer">
 		<div class="container">
